--- a/sdl_engine/msvc/sdl_engine.vcxproj
+++ b/sdl_engine/msvc/sdl_engine.vcxproj
@@ -112,6 +112,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+      <Optimization>Disabled</Optimization>
     </ClCompile>
     <Lib>
       <OutputFile>$(OutDir)sdlengine.lib</OutputFile>
